<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) Jim Coles (jameskcoles@gmail.com) 2018 through present.
  ~
  ~ Licensed under the following license agreement:
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Also see the LICENSE file in the repository root directory.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jkcsoft</groupId>
        <artifactId>jkcsoft-parent-pom</artifactId>
        <version>1.4-SNAPSHOT</version>
    </parent>

    <groupId>org.jkcsoft.javalib</groupId>
    <artifactId>java-lib</artifactId>
    <version>2.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <modules>
        <module>bom</module>
        <module>java-utils</module>
<!--        <module>xpack-anno</module>-->
    </modules>

    <build>
        <defaultGoal>package</defaultGoal>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>